SERVER-56936 Ensure ReshardingCoordinator's _flushReshardingStateChanges for CoordinatorStateEnum::kPreparingToDonate isn't interrupted on abort

SERVER-56288 Don't wait for participant machine creation in
resharding_abort_command.js